# PokerParlor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  tester
src/: game.cpp  game.h  game.hpp  main.cpp
src/deck/: card.cpp  card.hpp  deck.cpp  deck.h  deck.hpp
src/equity/: equity.cpp  equity.hpp
src/evaluator/: arrays.h  evaluator.cpp  evaluator.h  evaluator.hpp  tester.cpp
src/player/: player.cpp  player.h  player.hpp
tests/: mass_run.sh
